force-app/main/default/objects/Resolution__c/fields/Estimate_Hrs__c.field-meta.xml
<CustomField>
    <fullName>Estimate_Hrs__c</fullName>
    <label>Estimate (Hrs)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>