force-app/main/default/objects/Resolution__c/fields/External_Reference_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Reference_ID__c</fullName>
    <inlineHelpText>For external vendors system reference ID for example PwC Case management, or Birch Hill Asana</inlineHelpText>
    <label>External Reference ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>