force-app/main/default/objects/Resolution__c/fields/Issue__c.field-meta.xml
<CustomField>
    <fullName>Issue__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Issue</label>
    <referenceTo>Issue__c</referenceTo>
    <relationshipLabel>Resolutions</relationshipLabel>
    <relationshipName>Resolutions</relationshipName>
    <type>Lookup</type>
</CustomField>