force-app/main/default/objects/Resolution__c/fields/Resolution_Description__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Description__c</fullName>
    <label>Resolution Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>