force-app/main/default/objects/Resolution__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Requirements Gathering</fullName>
            </value>
            <value>
                <fullName>Solution Design/Estimate</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Ready for Testing</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>On Hold - High Cost</fullName>
            </value>
            <value>
                <fullName>On Hold - Low Priority</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>