force-app/main/default/objects/Resolution__c/recordTypes/Development_Item.recordType-meta.xml
<RecordType>
    <fullName>Development_Item</fullName>
    <active>true</active>
    <description>For any change, fix, new feature or update to the system that requires configuration or development.</description>
    <label>Development Item</label>
</RecordType>