force-app/main/default/objects/Resolution__c/recordTypes/Training_Process.recordType-meta.xml
<RecordType>
    <fullName>Training_Process</fullName>
    <active>true</active>
    <description>Use when resolution involves or is due to training or permanent process change</description>
    <label>Training/Process</label>
</RecordType>