force-app/main/default/objects/Resolution__c/recordTypes/Workaround.recordType-meta.xml
<RecordType>
    <fullName>Workaround</fullName>
    <active>true</active>
    <description>For temporary fixes to deal with this issue</description>
    <label>Workaround</label>
</RecordType>