force-app/main/default/objects/Resolution__c/listViews/Internal_Citron_Resolution.listView-meta.xml
<ListView>
    <fullName>Internal_Citron_Resolution</fullName>
    <filterScope>Queue</filterScope>
    <label>Internal Citron</label>
    <queue>Internal_Citron</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>